--- a/index.html
+++ b/index.html
@@ -7,9 +7,67 @@
     <!-- Page Title -->
     <title>FCC Technical Documentation</title>
     <!-- Styles -->
+    <link rel="stylesheet" href="/css/bootstrap-grid.css">
     <link rel="stylesheet" href="/css/main.min.css">
 </head>
 <body>
     
+    <div class="container-fluid p-0">
+        <div class="row no-gutters">
+            <div class="col-xl-2 col-lg-3 col-md-12 col-sm-12 col-12">
+                <!-- Sidebar -->
+                <div class="sidebar">
+                    <!-- Sidebar: Header -->
+                    <div class="sidebar__header">
+                        <span class="sidebar__header-title">
+                            HTML
+                        </span>
+                        <span class="sidebar__header-subtitle">
+                            Documentation
+                        </span>
+                    </div>
+                    <!-- Divider -->
+                    <div class="divider">
+                        <i class="material-icons left">add</i>
+                        <i class="material-icons right">add</i>
+                        <div class="divider__line"></div>
+                    </div>
+                    <!-- Sidebar: Navigation -->
+                    <nav class="sidebar__nav">
+                        <a href="#" class="sidebar__nav-link sidebar__nav-link--active">01. Introduction</a>
+                        <a href="#" class="sidebar__nav-link">02. Editors</a>
+                        <a href="#" class="sidebar__nav-link">03. Basic</a>
+                        <a href="#" class="sidebar__nav-link">04. Elements</a>
+                        <a href="#" class="sidebar__nav-link">05. Attributes</a>
+                        <a href="#" class="sidebar__nav-link">06. Headings</a>
+                        <a href="#" class="sidebar__nav-link">07. Paragraphs</a>
+                        <a href="#" class="sidebar__nav-link">08. Styles</a>
+                        <a href="#" class="sidebar__nav-link">09. Formatting</a>
+                        <a href="#" class="sidebar__nav-link">10. Quatations</a>
+                        <a href="#" class="sidebar__nav-link">11. Comments</a>
+                        <a href="#" class="sidebar__nav-link">12. Colors</a>
+                        <a href="#" class="sidebar__nav-link">13. CSS</a>
+                        <a href="#" class="sidebar__nav-link">14. Reference</a>
+                    </nav>
+                </div>
+            </div>
+            <div class="col-xl-10 col-lg-9 col-md-12 col-sm-12 col-12">
+                <!-- Main Content -->
+                <main class="main">
+
+                </main>
+            </div>
+        </div>
+    </div>
+
+    <!-- App Bar -->
+    <div class="app-bar">
+        <div class="app-bar__button">
+            <div class="button">
+                <i class="material-icons">menu</i>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
