--- a/index.html
+++ b/index.html
@@ -11,65 +11,147 @@
     <link rel="stylesheet" href="/css/main.min.css">
 </head>
 <body>
-    
-    <div class="container-fluid p-0">
-        <div class="row no-gutters">
-            <div class="col-xl-2 col-lg-3 col-md-12 col-sm-12 col-12">
-                <!-- Sidebar -->
-                <div id="sidebarMenu" class="sidebar">
-                    <!-- Sidebar: Header -->
-                    <div class="sidebar__header">
-                        <span class="sidebar__header-title">
-                            HTML
-                        </span>
-                        <span class="sidebar__header-subtitle">
-                            Documentation
-                        </span>
-                    </div>
-                    <!-- Divider -->
-                    <div class="divider">
-                        <i class="material-icons left">add</i>
-                        <i class="material-icons right">add</i>
-                        <div class="divider__line"></div>
-                    </div>
-                    <!-- Sidebar: Navigation -->
-                    <nav class="sidebar__nav">
-                        <a href="#" class="sidebar__nav-link sidebar__nav-link--active">01. Introduction</a>
-                        <a href="#" class="sidebar__nav-link">02. Editors</a>
-                        <a href="#" class="sidebar__nav-link">03. Basic</a>
-                        <a href="#" class="sidebar__nav-link">04. Elements</a>
-                        <a href="#" class="sidebar__nav-link">05. Attributes</a>
-                        <a href="#" class="sidebar__nav-link">06. Headings</a>
-                        <a href="#" class="sidebar__nav-link">07. Paragraphs</a>
-                        <a href="#" class="sidebar__nav-link">08. Styles</a>
-                        <a href="#" class="sidebar__nav-link">09. Formatting</a>
-                        <a href="#" class="sidebar__nav-link">10. Quatations</a>
-                        <a href="#" class="sidebar__nav-link">11. Comments</a>
-                        <a href="#" class="sidebar__nav-link">12. Colors</a>
-                        <a href="#" class="sidebar__nav-link">13. CSS</a>
-                        <a href="#" class="sidebar__nav-link">14. Reference</a>
-                    </nav>
-                </div>
-            </div>
-            <div class="col-xl-10 col-lg-9 col-md-12 col-sm-12 col-12">
-                <!-- Main Content -->
-                <main class="main">
-
-                </main>
-            </div>
+    <!-- Side Nav -->
+    <nav id="navbar" class="sidebar">
+        <header>
+            html Docs
+        </header>
+        <div class="divider">
+            <i class="material-icons left">add</i>
+            <i class="material-icons right">add</i>
+            <div class="divider__line"></div>
         </div>
-    </div>
+        <a class="nav-link" href="#Introduction">Introduction</a>
+        <a class="nav-link" href="#Editors">Editors</a>
+        <a class="nav-link" href="#Basics">Basics</a>
+        <a class="nav-link" href="#Elements">Elements</a>
+        <a class="nav-link" href="#Attributes">Attributes</a>
+        <a class="nav-link" href="#Reference">Reference</a>
+    </nav>
 
-    <!-- App Bar -->
-    <div class="app-bar">
-        <div class="app-bar__button">
-            <div class="button" onclick="toggleMenu();">
-                <i class="material-icons">menu</i>
+    <!-- Main Content -->
+    <main id="main-doc">
+        <section id="Introduction" class="main-section">
+            <header>
+                Introduction
+            </header>
+            <div class="divider">
+                <i class="material-icons left">add</i>
+                <i class="material-icons right">add</i>
+                <div class="divider__line"></div>
             </div>
-        </div>
-    </div>
+            <p>HTML is the standard markup language for creating Web pages.</p>
+            <ul>
+                <li>HTML stands for Hyper Text Markup Language</li>
+                <li>HTML is the standard markup language for creating Web pages</li>
+                <li>HTML describes the structure of a Web page</li>
+                <li>HTML consists of a series of elements</li>
+                <li>HTML elements tell the browser how to display the content</li>
+                <li>HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link", etc.</li>
+            </ul>
+            <h2>A Simple HTML Document</h2>
+            <code class="code-snippet-block">
+                &lt;!DOCTYPE html&gt;<br/>
+                &lt;html&gt;<br/>
+                &lt;head&gt;<br/>
+                &lt;title&gt;Page Title&lt;/title&gt;<br/>
+                &lt;/head&gt;<br/>
+                &lt;body&gt;<br/>
+                <br/>
+                &lt;h1&gt;My First Heading&lt;/h1&gt;<br/>
+                &lt;p&gt;My first paragraph.&lt;/p&gt;<br/>
+                <br/>
+                &lt;/body&gt;<br/>
+                &lt;/html&gt;
+            </code>
+            <h2>Example Explained</h2>
+            <ul>
+                <li>The <code>&lt;!DOCTYPE html&gt;</code> declaration defines that this document is an HTML5 document</li>
+                <li>The <code>&lt;html&gt;</code> element is the root element of an HTML page</li>
+                <li>The <code>&lt;head&gt;</code> element contains meta information about the HTML page</li>
+                <li>The <code>&lt;title&gt;</code> element specifies a title for the HTML page (which is shown in the browser's title bar or in the page's tab)</li>
+                <li>The <code>&lt;body&gt;</code> element defines the document's body, and is a container for all the visible contents, such as headings, paragraphs, images, hyperlinks, tables, lists, etc.</li>
+                <li>The <code>&lt;h1&gt;</code> element defines a large heading</li>
+                <li>The <code>&lt;p&gt;</code> element defines a paragraph</li>
+            </ul>
+        </section>
+        <section id="Editors" class="main-section">
+            <header>
+                Editors
+            </header>
+            <div class="divider">
+                <i class="material-icons left">add</i>
+                <i class="material-icons right">add</i>
+                <div class="divider__line"></div>
+            </div>
+            <p>A simple text editor is all you need to learn HTML.</p>
+            <p>Web pages can be created and modified by using professional HTML editors. <br>However, for learning HTML we recommend a simple text editor like Notepad (PC) or TextEdit (Mac).<br>We believe in that using a simple text editor is a good way to learn HTML.Follow the steps below to create your first web page with Notepad or TextEdit.</p>
+        </section>
+        <section id="Basics" class="main-section">
+            <header>
+                Basics
+            </header>
+            <div class="divider">
+                <i class="material-icons left">add</i>
+                <i class="material-icons right">add</i>
+                <div class="divider__line"></div>
+            </div>
+            <p>
+                In this chapter we will show some basic HTML examples.
+                <br>
+                Don't worry if we use tags you have not learned about yet.
+            </p>
+            <h2>HTML Documents</h2>
+            <p>All HTML documents must start with a document type declaration: &lt;!DOCTYPE html&gt;.</p>
+            <p>The HTML document itself begins with &lt;html&gt; and ends with &lt;/html&gt;.</p>
+            <p>The visible part of the HTML document is between &lt;body&gt; and &lt;/body&gt;.</p>
+        </section>
+        <section id="Elements" class="main-section">
+            <header>
+                Elements
+            </header>
+            <div class="divider">
+                <i class="material-icons left">add</i>
+                <i class="material-icons right">add</i>
+                <div class="divider__line"></div>
+            </div>
+            <p>An HTML element is defined by a start tag, some content, and an end tag.</p>
+            <h2>Nested HTML Elements</h2>
+            <p>HTML elements can be nested (this means that elements can contain other elements).</p>
+            <p>All HTML documents consist of nested HTML elements.</p>
+            <p>The following example contains four HTML elements (&lt;html&gt;, &lt;body&gt;, &lt;h1&gt; and &lt;p&gt;)</p>
+        </section>
+        <section id="Attributes" class="main-section">
+            <header>
+                Attributes
+            </header>
+            <div class="divider">
+                <i class="material-icons left">add</i>
+                <i class="material-icons right">add</i>
+                <div class="divider__line"></div>
+            </div>
+            <p>HTML attributes provide additional information about HTML elements.</p>
+            <h2>HTML Attributes</h2>
+            <p>All HTML elements can have attributes</p>
+            <p>Attributes provide additional information about elements</p>
+            <p>Attributes are always specified in the start tag</p>
+            <p>Attributes usually come in name/value pairs like: name="value"</p>
+        </section>
+        <section id="Reference" class="main-section">
+            <header>
+                Reference
+            </header>
+            <div class="divider">
+                <i class="material-icons left">add</i>
+                <i class="material-icons right">add</i>
+                <div class="divider__line"></div>
+            </div>
+            <p>All the documentation in this page is taken from <a href="https://www.w3schools.com/html/default.asp">w3schools.com</a></p>
+        </section>
+    </main>
 
     <!-- Scripts -->
     <script src="/scripts/main.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
